5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1592_1801.log
== TEST (2019-03-31 13:03:22) 
-- CODE:
objeto = input("nome do objeto: ")
repeticao =input("digite a repeticao: ")

print(srt("Abre + nome_do_objeto" * repeticao))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(srt("Abre + nome_do_objeto" * repeticao))
NameError: name 'srt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:04:54) 
-- CODE:
objeto = input("nome do objeto: ")
repeticao =input("digite a repeticao: ")



print(str("Abre + nome_do_objeto" * repeticao))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(str("Abre + nome_do_objeto" * repeticao))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:05:40) 
-- CODE:
objeto = input("nome do objeto: ")
repeticao =input("digite a repeticao: ")

str("Abra + nome_do_objeo")

print(str("Abre + nome_do_objeto" * repeticao))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(str("Abre + nome_do_objeto" * repeticao))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:06:08) 
-- CODE:
objeto = input("nome do objeto: ")
repeticao =input("digite a repeticao: ")

str("Abra + nome_do_objeo")

print(str("Abra + nome_do_objeto" * repeticao))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(str("Abra + nome_do_objeto" * repeticao))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:06:26) 
-- CODE:
objeto = input("nome do objeto: ")
repeticao =input("digite a repeticao: ")

print(str("Abra + nome_do_objeto" * repeticao))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(str("Abra + nome_do_objeto" * repeticao))
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:07:06) 
-- CODE:
objeto = input("nome do objeto: ")
repeticao =input("digite a repeticao: ")

print(str("Abra + nome_do_objeto * repeticao"))
-- OUTPUT:
Abra + nome_do_objeto * repeticao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:07:18) 
-- CODE:
objeto = input("nome do objeto: ")
repeticao =input("digite a repeticao: ")

print(str("Abra + nome_do_objeto * repeticao"))
-- EXECUTION TIME:
0.168967
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra + nome_do_objeto * repeticao
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra + nome_do_objeto * repeticao
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra + nome_do_objeto * repeticao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:07:32) 
-- CODE:
objeto = input("nome do objeto: ")
repeticao = input("digite a repeticao: ")

print(str("Abra + nome_do_objeto * repeticao"))
-- OUTPUT:
Abra + nome_do_objeto * repeticao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:45:58) 
-- CODE:
objeto = input("nome do objeto: ")
repeticao = input("digite a repeticao: ")

print(str("Abra + nome_do_objeto * repeticao"))
-- OUTPUT:
Abra + nome_do_objeto * repeticao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
